--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h3>Coding</h3>
         <p>I am developing my coding skill in C++.<br>
         My profile:<br />
-        <a href="https://codeforces.com/profile/YadavAman" target="_blank">Codeforces</a>
+        <a href="https://codeforces.com/profile/HDGSP" target="_blank">Codeforces</a>
       </div>
     </div>
 
